# DeDenker

./: .tool-versions  CODEOWNERS  DetectionCollector.py  Dockerfile  README.md  config.py  fetcher.py  main.py  models.py  pyproject.toml  telraam_api.py
.github/: dependabot.yml
.github/workflows/: docker-build-push.yml
dedenker/: __main__.py  config.py  telraam_api.py
