[tool.poetry]
package-mode = false
name = "De Denker"
description = "A HMM lapper for Telraam using the API"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hmmlearn = "^0.3.0"
requests = "^2.31.0"
colorlog = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
