[project]
name = "DeDenker"
version = "0.1.0"
description = "A HMM lapper for Telraam using the API"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "colorlog (>=6.10.1,<7.0.0)",
    "hmmlearn (>=0.3.3,<1.0.0)",
    "requests (>=2.33.1,<3.0.0)",
]

[dependency-groups]
dev = [
    "pyinstaller (>=6.20.0,<7.0.0)",
]
